--- a/src/main/webapp/WEB-INF/style/common.css
+++ b/src/main/webapp/WEB-INF/style/common.css
@@ -6,16 +6,18 @@
 
 
 /* Remove default margin and padding */
-body, h1, h2, h3, h4, h5, h6, p, ol, ul {
+body, h1, h2, h3, h4, h5, h6, p, ol, ul, section {
     margin: 0;
     padding: 0;
     font-family: Pretendard;
+    box-sizing: border-box;
 }
 
 /* Set default font size and family */
 body, button, input, select, textarea {
     font-size: 100%;
     font-family: inherit;
+    box-sizing: border-box;
 }
 
 /* Remove list styles (bullets/numbers) */
@@ -39,6 +41,10 @@ button, input, select, textarea {
     margin: 0;
     border: none;
     outline: none;
+}
+
+div {
+    box-sizing: border-box;
 }
 
 /* Additional resets... */
