--- a/src/main/webapp/WEB-INF/style/main.css
+++ b/src/main/webapp/WEB-INF/style/main.css
@@ -8,7 +8,7 @@ header {
 
 .inner_background {
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     background-image: url("https://petitions.assembly.go.kr/assets/img/mainVisual01.6a05f050.jpg");
     background-size: cover;
 }
@@ -16,6 +16,7 @@ header {
 .center_area {
     width: 1100px;
     margin: 0 auto;
+    padding-bottom: 40px;
 }
 
 .center_area .header_inner_wrap {
