--- a/src/main/webapp/WEB-INF/views/detail.html
+++ b/src/main/webapp/WEB-INF/views/detail.html
@@ -2,9 +2,113 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>국민청원</title>
+    <link rel="stylesheet" href="../style/common.css">
+    <link rel="stylesheet" href="../style/main.css">
+    <link rel="stylesheet" href="../style/detail.css">
 </head>
 <body>
+<main class="wrap">
+    <div class="inner_background">
+        <div class="center_area">
+
+            <header>
+                <div class="header_inner_wrap">
+                    <div>
+                        <img src="https://petitions.assembly.go.kr/assets/img/gnb_assembly_logo.fd2631f3.png">
+                    </div>
+                    <div>
+                        <ul>
+                            <li><a href="#">Home</a></li>
+                            <li><a href="#">회원가입</a></li>
+                            <li><a href="#">로그인</a></li>
+                            <li><a href="#">FAQ</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </header>
+
+            <section class="gnb">
+                <div class="gnb_wrap">
+                    <div class="first_menu_img">
+                        <img src="https://petitions.assembly.go.kr/assets/img/gnbLogo.3b00e93d.png">
+                    </div>
+                    <div><p>청원안내</p></div>
+                    <div><p>동의진행 청원</p></div>
+                    <div><p>동의종료 청원</p></div>
+                    <div><p>위원부 회부 청원</p></div>
+                </div>
+            </section>
+
+            <section class="mid_text_area">
+                <h2>동의진행 청원</h2>
+                <p>당신의 제안, 우리의 동의, 함께 하는 입법</p>
+            </section>
+
+            <section class="detail_area">
+                <h1 class="title">제발 제 조카를 성폭력 가해학생과 한 교실에 두지 말아 주세요 성폭력 가해학생의 교실분리 또는 전학 조치 의무화에 관한 청원</h1>
+
+                <div class="info">
+                    <div>
+                        <p>청원분야</p>
+                        <p>교육</p>
+                    </div>
+                    <div>
+                        <div class="inner">
+                            <p>청원종료일</p>
+                            <p>2022-09-30</p>
+                        </div>
+                        <div class="inner">
+                            <p>청원결과</p>
+                            <p>동의만료폐기</p>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="inner">
+                            <p>동의기간</p>
+                            <p>2022-08-30 ~ 2022-09-29</p>
+                        </div>
+                        <div class="inner">
+                            <p>동의 수</p>
+                            <p><span>2,149</span>명</p>
+                        </div>
+                    </div>
+                </div>
+
+                <section class="detail_info">
+                    <div class="top">
+                        <p>청원인</p>
+                        <p>정**</p>
+                    </div>
+                    <div class="mid">
+                        <p>청원의 취지</p>
+                        <p>[학교폭력예방 및 대책에 관련 법률] 조치사항에서 가해자와 피해자의 분리 조치는 선택 또는 요청 항목이 아닌, 학교에서 이행해야 할 의무항목이 되어야 합니다. 의무 항목이 아니고 가해학생의 교실 분리 또는 전학이 조치 항목이 아닐 경우 학교측은 가해자와 피해자를 한 교실에 방치 하기 때문 입니다.
+
+                            또한 [학교폭력예방 및 대책에 관련 법률]의 조치사항들은 '학교측에 요청' 또는 '이행에 협조' 등의 식으로 통보에서 그치고 있어, 학교측에서 적극적인 조치를 취하지 않을 경우 제 2차 피해를 야기 시킬 수 밖에 없습니다. </p>
+                    </div>
+                    <div class="bot">
+                        <p>청원의 내용</p>
+                        <p>발달장애를 가지고 있는 조카가 어느새 6학년이 되었습니다.
+                            장애가 있음에도 불구하고 나름 학교생활을 잘 해 나가고 있는 게 기특했고 감사했습니다.
+                            하지만 얼마 전부터 조카는 등교를 거부했고 그 이유가 같은 반 학생에게 지속적으로 성폭력을 당해 왔기 때문이라는 사실을 알게 되었습니다.
+
+                            힘들고 긴 학교폭력위원회의 끝은 가해 학생의 '사회봉사 5시간'과 '신고(다른 학생들의 신고 사례 또한 있었습니다.) 및 고발 학생에 대한 접촉, 협박, 보복행위 금지' 처분이었습니다.
+                            하지만 교실 분리 또는 전학에 대한 조치 없이 같은 교실 내에 있으면서 접촉 금지가 가능할 리 없습니다.
+                            저희 가족은 전학까지는 아니더라도 교실 분리 만이라도 학교 측에 요청했지만 학교 측에서는 학교폭력위원회의 처분 결과에 해당 조치사항이 없기 때문에 이를 받아들여 주지 않고 있습니다.
+
+                            이에, [학교폭력예방 및 대책에 관련 법률] 조치사항에서 가해자와 피해자의 분리 조치는 선택 또는 요청 항목이 아닌, 학교에서 이행해야 할 의무항목이 되도록 그리고 학교 측은 학교폭력위원회의 처분 결과에 상관없이 피해자에 대한 적극적인 보호를 취해주길 바라는 바입니다.
+
+                            지금 이 글은 쓰는 중에도 손이 너무 떨립니다. 그래서 온 마음을 다 담지 못해 두서없이 써 내려진 것 같습니다.
+                            읽어만 주셔도 감사를 드리며 청원에 동의까지 해 주신다면 정말 감사하겠습니다.
+
+                            더 이상 성폭력 피해자들이 2차 피해 상황에 방치되지 않도록 도와주세요.</p>
+                    </div>
+                </section>
+            </section>
+
+
+    </div>
+</main>
 
 </body>
 </html>
