--- a/src/main/webapp/WEB-INF/views/detail.html
+++ b/src/main/webapp/WEB-INF/views/detail.html
@@ -9,41 +9,46 @@
 </head>
 <body>
 <main class="wrap">
-    <div class="inner_background">
+    <div>
+<!--        <div class="center_area">-->
+        <div class="inner_background_height">
+            <div class="center_area">
+                <header>
+                    <div class="header_inner_wrap">
+                        <div>
+                            <img src="https://petitions.assembly.go.kr/assets/img/gnb_assembly_logo.fd2631f3.png">
+                        </div>
+                        <div>
+                            <ul>
+                                <li><a href="#">Home</a></li>
+                                <li><a href="#">회원가입</a></li>
+                                <li><a href="#">로그인</a></li>
+                                <li><a href="#">FAQ</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </header>
+
+                <section class="gnb">
+                    <div class="gnb_wrap">
+                        <div class="first_menu_img">
+                            <img src="https://petitions.assembly.go.kr/assets/img/gnbLogo.3b00e93d.png">
+                        </div>
+                        <div><p>청원안내</p></div>
+                        <div><p>동의진행 청원</p></div>
+                        <div><p>동의종료 청원</p></div>
+                        <div><p>위원부 회부 청원</p></div>
+                    </div>
+                </section>
+
+                <section class="mid_text_area">
+                    <h2 style="font-size: 38px; font-weight: 700;">동의진행 청원</h2>
+                    <p style="font-size: 21px; font-weight: 500;">당신의 제안, 우리의 동의, 함께 하는 입법</p>
+                </section>
+            </div>
+        </div>
         <div class="center_area">
 
-            <header>
-                <div class="header_inner_wrap">
-                    <div>
-                        <img src="https://petitions.assembly.go.kr/assets/img/gnb_assembly_logo.fd2631f3.png">
-                    </div>
-                    <div>
-                        <ul>
-                            <li><a href="#">Home</a></li>
-                            <li><a href="#">회원가입</a></li>
-                            <li><a href="#">로그인</a></li>
-                            <li><a href="#">FAQ</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </header>
-
-            <section class="gnb">
-                <div class="gnb_wrap">
-                    <div class="first_menu_img">
-                        <img src="https://petitions.assembly.go.kr/assets/img/gnbLogo.3b00e93d.png">
-                    </div>
-                    <div><p>청원안내</p></div>
-                    <div><p>동의진행 청원</p></div>
-                    <div><p>동의종료 청원</p></div>
-                    <div><p>위원부 회부 청원</p></div>
-                </div>
-            </section>
-
-            <section class="mid_text_area">
-                <h2>동의진행 청원</h2>
-                <p>당신의 제안, 우리의 동의, 함께 하는 입법</p>
-            </section>
 
             <section class="detail_area">
                 <h1 class="title">제발 제 조카를 성폭력 가해학생과 한 교실에 두지 말아 주세요 성폭력 가해학생의 교실분리 또는 전학 조치 의무화에 관한 청원</h1>
@@ -105,8 +110,8 @@
                     </div>
                 </section>
             </section>
-
-
+        </div>
+<!--        </div>-->
     </div>
 </main>
 
