--- a/src/main/webapp/WEB-INF/style/main.css
+++ b/src/main/webapp/WEB-INF/style/main.css
@@ -13,10 +13,23 @@ header {
     background-size: cover;
 }
 
+.inner_background_height {
+    width: 100%;
+    height: 400px;
+    background-image: url("https://petitions.assembly.go.kr/assets/img/mainVisual01.6a05f050.jpg");
+    background-size: cover;
+    background-position: 50% 50%;
+}
+
 .center_area {
     width: 1100px;
     margin: 0 auto;
     padding-bottom: 40px;
+}
+
+.center_area_other {
+    width: 1100px;
+    margin: 0 auto;
 }
 
 .center_area .header_inner_wrap {
@@ -31,6 +44,24 @@ header {
 }
 
 .center_area .header_inner_wrap ul li a {
+    color: #fff;
+    text-shadow: 2px 1px 1px rgba(0,0,0,.4);
+    font-weight: 400;
+    font-size: 14px;
+}
+
+.center_area_other .header_inner_wrap {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.center_area_other .header_inner_wrap ul {
+    display: flex;
+    gap: 20px;
+}
+
+.center_area_other .header_inner_wrap ul li a {
     color: #fff;
     text-shadow: 2px 1px 1px rgba(0,0,0,.4);
     font-weight: 400;
